feat: change SkillAnalyzer logic, moved JobOffer, SkillScore -> ScoreItem